Creación de todas las sections del HTML junto con añadidos de divs cada uno con su respectiva clase

--- a/index.html
+++ b/index.html
@@ -6,6 +6,75 @@
     <title>Digital calculator</title>
 </head>
 <body>
+    <header>
+        <div class="title-caculator">
+            <h1>Digital calculator</h1>
+        </div>
+    </header>
+
+    <main>
+        <section class="calculator">
+
+        <section class="operations">
+
+            <div class="show-operation">
+                <input type="number">
+            </div>
+
+            <div class="insert-operation">
+                <input type="number">
+            </div>
+
+        </section>
+
+        <section class="body-calculator">
+            <div class="btns">
+                <button>c</button>
+                <button>%</button>
+                <button class="special-btn">/</button>
+            </div>
+
+            <div class="btns">
+                <button>1</button>
+                <button>2</button>
+                <button>3</button>
+                <button>+</button>
+            </div>
+
+            <div class="btns">
+                <button>4</button>
+                <button>5</button>
+                <button>6</button>
+                <button>-</button>
+            </div>
+
+            
+            <div class="btns">
+                <button>7</button>
+                <button>8</button>
+                <button>9</button>
+                <button>x</button>
+            </div>
+
+            <div class="btns">
+                <button>0</button>
+                <button>00</button>
+                <button class="special-btn">-</button>
+            </div>
+        </section>
+
+
+
+    </section>
+    </main>
     
+    <footer>
+        <section class="copyright">
+            <div class="last-words">
+                <h3>Creado en el 2023 por The Anonymus</h3>
+                <a href="">Contáctanos</a>
+            </div>
+        </section>
+    </footer>
 </body>
 </html>
